--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,15 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.miasteniagravis.project.matias.mesti.Login"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/colorPrimary">
 
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/login2"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/textView5"
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hola"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textColor="@color/blanco"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
@@ -35,7 +47,8 @@
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="106dp" />
+        android:layout_marginLeft="106dp"
+        android:layout_marginStart="106dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -49,8 +62,50 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="@+id/textView2"
-        android:layout_marginLeft="27dp"
-        android:layout_marginTop="-10dp" />
+        android:layout_marginLeft="27dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="¡Uy!, ¿Olvidaste la contraseña?"
+        android:textColor="@color/blanco"
+        android:textSize="15sp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="9dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="¿No conocias a mesti?"
+        android:textColor="@color/blanco"
+        android:textSize="15sp"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Registrate"
+        android:textColor="@color/blanco"
+        android:textSize="20sp"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="29dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView5" />
 
     <EditText
         android:id="@+id/editText"
@@ -58,22 +113,23 @@
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Usuario"
+        android:text="@string/usuario"
+        android:textColor="#878787"
         android:gravity="center"
         android:background="@drawable/camposlogin"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         android:layout_marginStart="45dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText2"
         android:layout_marginEnd="45dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="21dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintVertical_bias="0.25"
+        app:layout_constraintBottom_toTopOf="@+id/editText2"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
         android:id="@+id/editText2"
@@ -81,6 +137,7 @@
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:gravity="center"
         android:background="@drawable/camposlogin"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
@@ -92,42 +149,62 @@
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="¡Uy!, ¿Olvidaste la contraseña?"
-        android:textColor="@color/blanco"
-        tools:layout_editor_absoluteX="86dp"
-        tools:layout_editor_absoluteY="343dp" />
-
     <Button
-        android:id="@+id/button2"
-        android:layout_width="260dp"
+        android:id="@+id/button"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:text="@string/entrar"
+        android:textColor="@color/blanco"
         android:background="@drawable/btnlogin"
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="391dp" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="44dp"
+        android:layout_marginEnd="44dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
-    <TextView
-        android:id="@+id/textView5"
+    <ImageView
+        android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿No conocias a mesti?"
-        android:textColor="@color/blanco"
-        android:textSize="15sp"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="509dp" />
+        app:srcCompat="@drawable/login1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/editText"
+        android:layout_marginEnd="28dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="38dp" />
 
-    <TextView
-        android:id="@+id/textView6"
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="108dp"
+        android:layout_height="33dp"
+        app:srcCompat="@drawable/login3"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/textView6"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="68dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="73dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registrate"
-        android:textColor="@color/blanco"
-        android:textSize="20sp"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="527dp" />
+        app:srcCompat="?attr/actionModeCloseDrawable"
+        android:background="#e1f9b9"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="29dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
