--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF1fe8af</color>
     <color name="blanco">#FFFFFF</color>
     <color name="gris">#878787</color>
+    <color name="morgris">#404659</color>
 
 </resources>
