--- a/app/src/main/res/layout/activity_pregunta0.xml
+++ b/app/src/main/res/layout/activity_pregunta0.xml
@@ -9,14 +9,46 @@
     tools:layout_editor_absoluteY="25dp"
     tools:layout_editor_absoluteX="0dp">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="207dp"
+        android:layout_height="0dp"
+        app:srcCompat="@drawable/mestipreg"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="172dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="412dp"
+        android:layout_height="188dp"
+        app:srcCompat="@drawable/barpregunta"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="-30dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
+        tools:layout_editor_absoluteY="-49dp" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="No te alarmes"
         android:textSize="25sp"
-        tools:layout_editor_absoluteY="137dp"
-        tools:layout_editor_absoluteX="102dp" />
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        android:layout_marginStart="8dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView2"
@@ -25,8 +57,11 @@
         android:text="Voy a hacerte"
         android:textColor="@color/morgris"
         android:textSize="28sp"
-        tools:layout_editor_absoluteY="167dp"
-        tools:layout_editor_absoluteX="94dp" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        android:layout_marginEnd="11dp"
+        app:layout_constraintRight_toRightOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView3"
@@ -35,8 +70,13 @@
         android:text="unas preguntas"
         android:textColor="@color/morgris"
         android:textSize="28sp"
-        tools:layout_editor_absoluteY="200dp"
-        tools:layout_editor_absoluteX="83dp" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
@@ -44,8 +84,12 @@
         android:layout_height="wrap_content"
         android:text="Necesito que"
         android:textSize="17sp"
-        tools:layout_editor_absoluteY="263dp"
-        tools:layout_editor_absoluteX="130dp" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
@@ -53,8 +97,11 @@
         android:layout_height="wrap_content"
         android:text="recuerdes cualquier cosa"
         android:textSize="17sp"
-        tools:layout_editor_absoluteY="284dp"
-        tools:layout_editor_absoluteX="85dp" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        android:layout_marginEnd="2dp"
+        app:layout_constraintRight_toRightOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView6"
@@ -62,34 +109,30 @@
         android:layout_height="wrap_content"
         android:text="por mas pequeño que sea"
         android:textSize="17sp"
-        tools:layout_editor_absoluteY="305dp"
-        tools:layout_editor_absoluteX="83dp" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="45dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="270dp"
+        android:layout_width="0dp"
         android:layout_height="48dp"
         android:text="@string/continuar"
         android:background="@drawable/btnpregunta"
         android:textColor="@color/blanco"
-        tools:layout_editor_absoluteY="371dp"
-        tools:layout_editor_absoluteX="45dp" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="207dp"
-        android:layout_height="138dp"
-        app:srcCompat="@drawable/mestipreg"
-        tools:layout_editor_absoluteY="431dp"
-        tools:layout_editor_absoluteX="172dp" />
-
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="0dp"
-        android:layout_height="201dp"
-        app:srcCompat="@drawable/barpregunta"
-        tools:layout_editor_absoluteY="-56dp"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="45dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="45dp"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="148dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -97,8 +140,12 @@
         android:layout_height="wrap_content"
         app:srcCompat="?attr/actionModeCloseDrawable"
         android:background="@android:color/transparent"
-        tools:layout_editor_absoluteY="29dp"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="31dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/imageButton2"
@@ -106,8 +153,12 @@
         android:layout_height="50dp"
         app:srcCompat="@drawable/info"
         android:background="@android:color/transparent"
-        tools:layout_editor_absoluteY="501dp"
-        tools:layout_editor_absoluteX="14dp" />
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
