--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.miasteniagravis.project.matias.mesti.Login"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    tools:layout_editor_absoluteY="25dp"
+    tools:layout_editor_absoluteX="0dp">
 
 
     <ImageView
@@ -13,27 +15,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/login2"
-        tools:layout_constraintTop_creator="1"
         android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="91dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView5"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hola"
-        android:textSize="30sp"
+        android:textSize="45sp"
         android:textColor="@color/blanco"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="102dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="22dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
@@ -43,12 +44,13 @@
         android:textSize="20sp"
         android:layout_centerHorizontal="true"
         android:textColor="@color/blanco"
-        android:layout_marginTop="170dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="11dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="106dp"
-        android:layout_marginStart="106dp" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
@@ -57,12 +59,11 @@
         android:text="lo invisible"
         android:textSize="20sp"
         android:textColor="@color/blanco"
-        tools:layout_constraintTop_creator="1"
         android:layout_marginStart="27dp"
+        tools:layout_constraintTop_creator="1"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView2"
-        android:layout_marginLeft="27dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView4"
@@ -73,11 +74,10 @@
         android:textSize="15sp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintRight_toRightOf="@+id/editText2"
         android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
     <TextView
         android:id="@+id/textView5"
@@ -100,8 +100,8 @@
         android:text="Registrate"
         android:textColor="@color/blanco"
         android:textSize="20sp"
-        tools:layout_constraintBottom_creator="1"
         android:layout_marginStart="29dp"
+        tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="16dp"
@@ -114,22 +114,19 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/usuario"
+        android:textSize="15sp"
         android:textColor="#878787"
         android:gravity="center"
         android:background="@drawable/camposlogin"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
         android:layout_marginStart="45dp"
         android:layout_marginEnd="45dp"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/editText2"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="21dp"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="15dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_bias="0.25"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/editText2"
@@ -141,25 +138,26 @@
         android:background="@drawable/camposlogin"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="45dp"
-        android:layout_marginEnd="45dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="76dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintRight_toRightOf="@+id/editText"
+        android:layout_marginTop="336dp"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginBottom="332dp"
+        app:layout_constraintLeft_toLeftOf="@+id/editText"
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:text="@string/entrar"
         android:textColor="@color/blanco"
         android:background="@drawable/btnlogin"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
         android:layout_marginStart="44dp"
         android:layout_marginEnd="44dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
@@ -171,12 +169,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/login1"
+        android:layout_marginEnd="26dp"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
-        android:layout_marginEnd="28dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="38dp" />
+        android:layout_marginBottom="324dp" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -200,8 +198,8 @@
         android:layout_height="wrap_content"
         app:srcCompat="?attr/actionModeCloseDrawable"
         android:background="#e1f9b9"
-        tools:layout_constraintTop_creator="1"
         android:layout_marginStart="16dp"
+        tools:layout_constraintTop_creator="1"
         android:layout_marginTop="29dp"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
