--- a/app/src/main/res/layout/activity_pregunta0.xml
+++ b/app/src/main/res/layout/activity_pregunta0.xml
@@ -11,32 +11,32 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="207dp"
-        android:layout_height="0dp"
+        android:layout_width="179dp"
+        android:layout_height="234dp"
         app:srcCompat="@drawable/mestipreg"
+        android:layout_marginStart="183dp"
         tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="172dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        android:layout_marginTop="22dp"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="412dp"
-        android:layout_height="188dp"
+        android:layout_width="437dp"
+        android:layout_height="139dp"
         app:srcCompat="@drawable/barpregunta"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="-14dp"
+        android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="-30dp"
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.513"
-        tools:layout_editor_absoluteY="-49dp" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="-8dp"
+        tools:layout_editor_absoluteX="-165dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -44,9 +44,9 @@
         android:layout_height="wrap_content"
         android:text="No te alarmes"
         android:textSize="25sp"
+        android:layout_marginStart="19dp"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
-        android:layout_marginStart="8dp"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="@+id/textView2" />
 
@@ -56,12 +56,12 @@
         android:layout_height="wrap_content"
         android:text="Voy a hacerte"
         android:textColor="@color/morgris"
-        android:textSize="28sp"
-        tools:layout_constraintRight_creator="1"
+        android:textSize="32sp"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
-        android:layout_marginEnd="11dp"
-        app:layout_constraintRight_toRightOf="@+id/textView3" />
+        android:layout_marginStart="12dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView3"
@@ -69,14 +69,14 @@
         android:layout_height="wrap_content"
         android:text="unas preguntas"
         android:textColor="@color/morgris"
-        android:textSize="28sp"
+        android:textSize="32sp"
+        tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="199dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
@@ -97,41 +97,40 @@
         android:layout_height="wrap_content"
         android:text="recuerdes cualquier cosa"
         android:textSize="17sp"
-        tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
-        android:layout_marginEnd="2dp"
-        app:layout_constraintRight_toRightOf="@+id/textView6" />
+        android:layout_marginStart="4dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="por mas pequeño que sea"
+        android:text="por mas pequeña que sea."
         android:textSize="17sp"
+        android:layout_marginEnd="32dp"
+        tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="45dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintRight_toRightOf="@+id/button"
+        android:layout_marginTop="78dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="40dp"
         android:text="@string/continuar"
         android:background="@drawable/btnpregunta"
         android:textColor="@color/blanco"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
         android:layout_marginStart="45dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="45dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="27dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="148dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageButton
@@ -140,8 +139,8 @@
         android:layout_height="wrap_content"
         app:srcCompat="?attr/actionModeCloseDrawable"
         android:background="@android:color/transparent"
-        tools:layout_constraintTop_creator="1"
         android:layout_marginStart="16dp"
+        tools:layout_constraintTop_creator="1"
         android:layout_marginTop="31dp"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -153,8 +152,8 @@
         android:layout_height="50dp"
         app:srcCompat="@drawable/info"
         android:background="@android:color/transparent"
-        tools:layout_constraintBottom_creator="1"
         android:layout_marginStart="16dp"
+        tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="16dp"
