--- a/app/src/main/res/layout/activity_presentacion.xml
+++ b/app/src/main/res/layout/activity_presentacion.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.miasteniagravis.project.matias.mesti.Presentacion">
-
+    tools:context="com.miasteniagravis.project.matias.mesti.Presentacion"
+    android:background="@color/blanco"
+    tools:layout_editor_absoluteY="25dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <TextView
         android:id="@+id/presentaciontextView"
@@ -13,10 +15,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
         android:text="¡Hola!"
         android:textSize="20sp"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="80dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/presentaciontextView2"
@@ -24,10 +32,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/presentaciontextView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
         android:text="soy"
         android:textSize="20sp"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:layout_marginEnd="9dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/presentaciontextView"
+        app:layout_constraintTop_toBottomOf="@+id/presentaciontextView" />
 
     <TextView
         android:id="@+id/presentaciontextView3"
@@ -35,54 +47,87 @@
         android:layout_height="wrap_content"
         android:text="¡Qué bueno tenerte por acá!"
         tools:ignore="HardcodedText"
-        android:layout_marginBottom="77dp"
         android:layout_above="@+id/presentaciontextView6"
         android:layout_centerHorizontal="true"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:layout_marginStart="21dp"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/presentaciontextView4"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/presentaciontextView4" />
 
     <TextView
         android:id="@+id/presentaciontextView4"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
         android:text="Convirtamos esta aventura de ser distintos"
         android:gravity="center"
         android:layout_alignTop="@+id/presentaciontextView3"
         android:layout_alignParentStart="true"
         tools:ignore="HardcodedText"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="35dp"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="101dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/presentaciontextView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="en un camino mas llevadero"
+        android:text="en un camino mas llevadero."
         tools:ignore="HardcodedText"
         android:textSize="15sp"
         android:layout_below="@+id/presentaciontextView4"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="26dp"
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintTop_toBottomOf="@+id/presentaciontextView4"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/presentaciontextView6" />
 
     <TextView
         android:id="@+id/presentaciontextView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Desliza para conocer de que va esto"
+        android:text="Desliza para conocer de que va esto."
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="47dp"
         tools:ignore="HardcodedText,SmallSp"
-        android:textSize="10sp"/>
+        android:textSize="15sp"
+        android:layout_marginStart="22dp"
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintTop_toBottomOf="@+id/presentaciontextView5"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/presentaciontextView4" />
 
     <ImageView
         android:id="@+id/presentacionimageView"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
+        android:layout_width="196dp"
+        android:layout_height="198dp"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
         app:srcCompat="@drawable/mesti1"
         tools:ignore="ContentDescription"
-        android:layout_below="@+id/presentaciontextView2"
-        android:layout_alignEnd="@+id/presentaciontextView6" />
+        android:layout_above="@+id/presentaciontextView3"
+        android:layout_alignStart="@+id/presentaciontextView6"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/presentaciontextView4"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="84dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="86dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/presentaciontextView" />
 
 
-</RelativeLayout>
+
+</android.support.constraint.ConstraintLayout>
