--- a/app/src/main/res/layout/activity_presentacion2.xml
+++ b/app/src/main/res/layout/activity_presentacion2.xml
@@ -22,11 +22,11 @@
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="108dp"
         app:srcCompat="@drawable/mesti"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/imageButton"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/textView"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:text="Miastenia"
         android:textColor="#ffffff"
-        android:textSize="30sp"
+        android:textSize="35sp"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         tools:ignore="HardcodedText" />
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:text="Gravis?"
         android:textColor="#ffffff"
-        android:textSize="30sp"
+        android:textSize="35sp"
         android:layout_below="@+id/textView2"
         android:layout_alignStart="@+id/textView"
         tools:ignore="HardcodedText" />
@@ -84,15 +84,16 @@
         android:layout_centerHorizontal="true" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        app:srcCompat="?attr/actionModeCloseDrawable"
+        android:background="@android:color/transparent"
+        tools:layout_constraintTop_creator="1"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="15dp"
-        android:background="#FF1fe8af"
-        app:srcCompat="?android:attr/actionModeCloseDrawable"
-        android:layout_toStartOf="@+id/button"
-        tools:ignore="ContentDescription" />
+        android:layout_marginTop="29dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </RelativeLayout>
