--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,23 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="com.miasteniagravis.project.matias.mesti.Registro">
+    tools:context="com.miasteniagravis.project.matias.mesti.Registro"
+    tools:layout_editor_absoluteY="25dp"
+    tools:layout_editor_absoluteX="0dp">
 
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="290dp"
-        android:layout_height="432dp"
+        android:layout_width="373dp"
+        android:layout_height="386dp"
         app:srcCompat="@drawable/regis"
+        tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="24dp"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="63dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/editText2"
@@ -31,13 +33,14 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Nombre"
+        android:textSize="15sp"
         android:gravity="center"
         android:textColor="@color/gris"
+        android:layout_marginStart="45dp"
+        android:layout_marginEnd="45dp"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/editText3"
-        android:layout_marginStart="45dp"
-        android:layout_marginEnd="45dp"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="16dp"
@@ -56,7 +59,7 @@
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintRight_toRightOf="@+id/editText2"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintLeft_toLeftOf="@+id/editText2" />
 
     <EditText
@@ -72,7 +75,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintRight_toRightOf="@+id/editText3"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="57dp"
+        android:layout_marginBottom="42dp"
         app:layout_constraintLeft_toLeftOf="@+id/editText3" />
 
     <Button
@@ -87,23 +90,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="@+id/editText"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="104dp"
+        android:layout_marginBottom="130dp"
         app:layout_constraintLeft_toLeftOf="@+id/editText" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Registrate"
-        android:textColor="@color/blanco"
-        android:textSize="40sp"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
-        android:layout_marginEnd="23dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView"
-        android:layout_marginBottom="47dp"
-        android:layout_marginRight="18dp" />
 
 
     <TextView
@@ -112,10 +100,26 @@
         android:layout_height="wrap_content"
         android:text="Al registrarte aceptas los"
         android:textColor="@color/blanco"
+        tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="2dp"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Regístrate"
+        android:textColor="@color/blanco"
+        android:textSize="45sp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="33dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -125,38 +129,39 @@
         android:layout_height="wrap_content"
         android:text="@string/tyc"
         android:textColor="@color/blanco"
-        tools:layout_constraintTop_creator="1"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="23dp"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="16dp"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView2" />
+        app:layout_constraintLeft_toLeftOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cuenta"
+        android:textSize="20sp"
         android:textColor="@color/blanco"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="22dp"
-        app:layout_constraintRight_toRightOf="@+id/textView3"
-        android:layout_marginBottom="16dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="?attr/actionModeCloseDrawable"
-        android:background="@color/colorAccent"
-        tools:layout_constraintTop_creator="1"
+        android:background="@android:color/transparent"
         android:layout_marginStart="16dp"
+        tools:layout_constraintTop_creator="1"
         android:layout_marginTop="29dp"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
